# drone_ros_ws

./: .gitignore  README.md
src/AAAAAAAAAAAAAAAAAAAAA/: CMakeLists.txt  package.xml
src/AAAAAAAAAAAAAAAAAAAAA/src/: MISSION.cpp  OFFBOARD_NODE.cpp  arm.cpp  arm2.cpp  auto_apr.cpp  auto_april.cpp  cathacanh.cpp  check_position.cpp  chupanh.cpp  compare_pose_rpy.cpp  hinhso8.cpp  local_pose.cpp  mission1.cpp  mission2.cpp  multi_start.launch.py  offboard_circle.cpp  offboard_node_velo_preven.cpp  only_offboard_circle.cpp  path_planer.cpp  path_planner.py  preclanding.cpp  set_offboard.cpp  square.cpp
src/VINS-MONO-ROS2/camera_model/include/camodocal/gpl/: EigenQuaternionParameterization.h
src/VINS-MONO-ROS2/camera_model/src/calib/: CameraCalibration.cc
src/VINS-MONO-ROS2/camera_model/src/gpl/: EigenQuaternionParameterization.cc
src/VINS-MONO-ROS2/config_pkg/config/px4_downcam/: px4_downcam_config.yaml
src/VINS-MONO-ROS2/feature_tracker/: CMakeLists.txt
src/VINS-MONO-ROS2/feature_tracker/launch/: px4_downcam.launch.py
src/VINS-MONO-ROS2/pose_graph/: CMakeLists.txt
src/VINS-MONO-ROS2/pose_graph/src/: pose_graph.cpp  pose_graph.h
src/VINS-MONO-ROS2/vins_estimator/: CMakeLists.txt
src/VINS-MONO-ROS2/vins_estimator/launch/: px4_downcam.launch.py
src/VINS-MONO-ROS2/vins_estimator/src/: estimator.cpp  estimator_node.cpp
src/VINS-MONO-ROS2/vins_estimator/src/factor/: pose_local_parameterization.cpp  pose_local_parameterization.h
src/VINS-MONO-ROS2/vins_estimator/src/initial/: initial_sfm.cpp  initial_sfm.h
src/VINS-MONO-ROS2/vins_estimator/src/utility/: visualization.cpp  visualization.h
src/apriltag_precision_landing/: CMakeLists.txt  package.xml
src/apriltag_precision_landing/config/: apriltag_precision_landing.yaml
src/apriltag_precision_landing/launch/: apriltag_precision_landing.launch.py  stack_mavros_apriltag_preland.launch.py
src/apriltag_precision_landing/scripts/: start_real_apriltag_pipeline.sh
src/apriltag_precision_landing/src/: apriltag_camera_detector_node.cpp  apriltag_precision_landing_node.cpp  precision_landing_controller_node.cpp
src/obs_avoid/: .gitignore  CMakeLists.txt  README.md  package.xml
src/obs_avoid/config/: nav2_gps_dual_ekf.yaml  nav2_gps_dual_ekf_sim_stable.yaml  nav2_gps_nav2_params.yaml  slam2d_real_1lidar.yaml
src/obs_avoid/launch/: nav2_gps_localization.launch.py  stack_full_obs_avoid_user.launch.py
src/obs_avoid/scripts/: dwa_adaptive_trials.py  export_global_pcd.sh  run_dwa_adaptive_trials.sh  run_offline_refine.sh  start_flight_mode.sh  start_mapping_mode.sh  start_real_basic_2d.sh  start_real_nav2_gps.sh  start_real_stack_px4.sh  start_sim_stack_mission_clone.sh  start_sim_stack_terminator.sh  start_slam_mapper.sh  start_slam_navigation_mode.sh  start_spiral_mapping_mode.sh  start_trajectory_compare.sh  trajectory_compare_node.py  view_latest_pcd.sh
src/obs_avoid/src/: lawnmower_mapping_mode.cpp  local_planner_hybrid_mode.cpp  local_planner_mode_a.cpp  local_planner_sector_mode.cpp  mavros_trajectory_3d_node.cpp  nav2_cmd_vel_bridge.cpp  odom_gps_validator.cpp  offboard_node_user_ctrl.cpp  slam_navigation_mode.cpp  spiral_mapping_mode.cpp
src/odom_flatten/: CMakeLists.txt  package.xml
src/odom_flatten/src/: px4_odom_flatten_node.cpp
src/open_vins/: COLCON_IGNORE
src/open_vins/config/px4_downcam/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/open_vins/ov_core/cmake/: ROS2.cmake
src/open_vins/ov_eval/cmake/: ROS2.cmake
src/open_vins/ov_init/cmake/: ROS2.cmake
src/open_vins/ov_msckf/: package.xml
src/open_vins/ov_msckf/cmake/: ROS2.cmake
src/open_vins/ov_msckf/launch/: px4_downcam.launch.py
src/open_vins/ov_msckf/src/ros/: ROS2Visualizer.cpp  ROS2Visualizer.h
src/px4_vio_bridge/: CMakeLists.txt  package.xml
src/px4_vio_bridge/config/: mavros_ekf_odom_viz.rviz  vins_mono_bridge.yaml  vins_odom_viz.rviz  vio_bridge.yaml
src/px4_vio_bridge/launch/: mavros_ekf_odom_viz.launch.py  openvins_to_px4_vio.launch.py  stack_full_obs_avoid_user.launch.py  stack_mavros_vio_preland.launch.py  vins_odom_viz.launch.py  vinsmono_full_stack.launch.py  vinsmono_to_px4_vio.launch.py
src/px4_vio_bridge/src/: vins_odom_viz_node.cpp  vio_to_mavros_bridge_node.cpp
src/rplidar_ros/: CMakeLists.txt
src/rplidar_ros/sdk/src/: rplidar_driver.cpp
src/rplidar_ros/sdk/src/arch/linux/: net_socket.cpp
tools/: pretty_openvins_log.py  setup_vinsmono_ros2_jazzy.sh
