<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_precision_landing</name>
  <version>0.3.0</version>
  <description>AprilTag-based precision landing stack for PX4 via MAVROS (camera detector + estimator + controller).</description>
  <maintainer email="lehaitrung@todo.todo">lehaitrung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
